--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">IdeaPlatform</string>
+    <string name="deleting_product">Удаление товара</string>
+    <string name="are_you_sure_you_want_delete_product">Вы действительно хотите удалить выбранный товар?</string>
+    <string name="no">Нет</string>
+    <string name="yes">Да</string>
+    <string name="amount_of_product">Количество товара</string>
+    <string name="cancel">Отмена</string>
+    <string name="accept">Принять</string>
+    <string name="list_of_products">Список товаров</string>
+    <string name="on_storage">На складе</string>
+    <string name="date_of_addition">Дата добавления</string>
+    <string name="search_for_products">Поиск товаров</string>
 </resources>
